[package]
name = "data_ingester_mssql"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1", features=["backtrace"]}
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
#reqwest = {version = "0", features = ["rustls-tls", "json"], default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0"
tiberius = {version="*", default-features=false, features=["tds73", "rustls", "sql-browser-tokio"]}
tokio-util = { version="0.7.12", features=["full", "compat"] }
futures= "*"

[lints]
workspace = true
