[package]
name = "data_ingester_qualys"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features=["backtrace"]}
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_splunk_search = { path = "../data_ingester_splunk_search" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
reqwest = {version = "0", features = ["rustls-tls", "json"], default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0"

[dev-dependencies]
tracing-subscriber = {version = "0", features = ["env-filter", "registry", "json", "valuable"]}
mockito = "1.6.1"

[lints]
workspace = true
