[package]
name = "data_ingester_splunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features=["backtrace"]}
hostname = "*"
itertools = "*"
reqwest = {version = "*", features = ["rustls-tls"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.25.0", features = ["full"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = {version = "*", features=["vendored"]}

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDcs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lints]
workspace = true
