[package]
name = "data_ingester_splunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features=["backtrace"]}
hostname = "0"
itertools = "0"
reqwest = {version = "0", features = ["rustls-tls", "json"], default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = {version = "0", features = ["env-filter", "registry", "json", "valuable"]}
tracing-core = "0"
tracing = "0"
tracing-serde = "0"

[dev-dependencies]
data_ingester_supporting = { path = "../data_ingester_supporting" }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = {version = "0", features=["vendored"]}

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDcs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lints]
workspace = true

[features]
live_tests = []