[package]
name = "data_ingester_supporting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features=["backtrace"]}
azure_identity = { version = "0.19", default-features = false, features = ["enable_reqwest_rustls", "client_certificate"]}
azure_security_keyvault = { version = "0.20", default-features = false,  features = ["enable_reqwest_rustls"]}
base64 = "0.22"
futures = "*"
tokio = { version = "1.25.0", features = ["full"] }
hickory-proto = "*"
hickory-resolver = { version = "*", features = ["dns-over-rustls"] }
tracing = "*"

[lints]
workspace = true
