[package]
name = "data_ingester_supporting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features=["backtrace"]}
azure_identity = { version = "0.19", default-features = false, features = ["enable_reqwest_rustls", "client_certificate"]}
azure_security_keyvault = { version = "0.19", default-features = false,  features = ["enable_reqwest_rustls"]}
base64 = "0"
futures = "0"
tokio = { version = "1", features = ["full"] }
hickory-proto = "0.25.0-alpha.4"
hickory-resolver = { version = "0.25.0-alpha.4", features = ["dns-over-rustls"] }
tracing = "0"

[dev-dependencies]
time = "*"
[lints]
workspace = true

[features]
live_tests = []