[package]
name = "data_ingester_threagile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
serde_with = "3"
serde_json = "1"
data_ingester_splunk_search = { path = "../data_ingester_splunk_search" }
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
tokio = { version = "1", features = ["full"] }
tracing = "0"
tracing-subscriber = "0"

[lints]
workspace = true
